Run motion modified

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,38 @@ Build/Android/res/*/*
 !Build/Android/res/*/*.png
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine
+Content/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.uasset
+Content/StarterContent/Maps/Advanced_Lighting.umap
+Content/StarterContent/Maps/Minimal_Default.umap
+Content/StarterContent/Maps/StarterMap.umap
+Content/StarterContent/Props/MaterialSphere.uasset
+Content/StarterContent/Props/SM_Bush.uasset
+Content/StarterContent/Props/SM_Chair.uasset
+Content/StarterContent/Props/SM_CornerFrame.uasset
+Content/StarterContent/Props/SM_Couch.uasset
+Content/StarterContent/Props/SM_Door.uasset
+Content/StarterContent/Props/SM_DoorFrame.uasset
+Content/StarterContent/Props/SM_GlassWindow.uasset
+Content/StarterContent/Props/SM_Lamp_Ceiling.uasset
+Content/StarterContent/Props/SM_Lamp_Wall.uasset
+Content/StarterContent/Props/SM_MatPreviewMesh_02.uasset
+Content/StarterContent/Props/SM_PillarFrame.uasset
+Content/StarterContent/Props/SM_PillarFrame300.uasset
+Content/StarterContent/Props/SM_Rock.uasset
+Content/StarterContent/Props/SM_Shelf.uasset
+Content/StarterContent/Props/SM_Stairs.uasset
+Content/StarterContent/Props/SM_Statue.uasset
+Content/StarterContent/Props/SM_TableRound.uasset
+Content/StarterContent/Props/SM_WindowFrame.uasset
+Content/StarterContent/Props/Materials/M_Bush.uasset
+Content/StarterContent/Props/Materials/M_Chair.uasset
+Content/StarterContent/Props/Materials/M_Door.uasset
+Content/StarterContent/Props/Materials/M_Frame.uasset
+Content/StarterContent/Props/Materials/M_Lamp.uasset
+Content/StarterContent/Props/Materials/M_MaterialSphere.uasset
+Content/StarterContent/Props/Materials/M_MaterialSphere_Plain.uasset
+Content/StarterContent/Props/Materials/M_Rock.uasset
+Content/StarterContent/Props/Materials/M_Shelf.uasset
+Content/StarterContent/Props/Materials/M_Statue.uasset
+Content/StarterContent/Props/Materials/M_StatueGlass.uasset
+Content/StarterContent/Props/Materials/M_TableRound.uasset
