add Assets/* to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ Content/StarterContent/Props/Materials/M_Shelf.uasset
 Content/StarterContent/Props/Materials/M_Statue.uasset
 Content/StarterContent/Props/Materials/M_StatueGlass.uasset
 Content/StarterContent/Props/Materials/M_TableRound.uasset
+Content/Assets/*
