--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,14 @@ Content/StarterContent/Props/Materials/M_Statue.uasset
 Content/StarterContent/Props/Materials/M_StatueGlass.uasset
 Content/StarterContent/Props/Materials/M_TableRound.uasset
 Content/Assets/*
+Content/StarterContent/Architecture/Floor_400x400.uasset
+Content/StarterContent/Architecture/Pillar_50x500.uasset
+Content/StarterContent/Architecture/SM_AssetPlatform.uasset
+Content/StarterContent/Architecture/Wall_400x200.uasset
+Content/StarterContent/Architecture/Wall_400x300.uasset
+Content/StarterContent/Architecture/Wall_400x400.uasset
+Content/StarterContent/Architecture/Wall_500x500.uasset
+Content/StarterContent/Architecture/Wall_Door_400x300.uasset
+Content/StarterContent/Architecture/Wall_Door_400x400.uasset
+Content/StarterContent/Architecture/Wall_Window_400x300.uasset
+Content/StarterContent/Architecture/Wall_Window_400x400.uasset
